# AI-Coding-ZeroToOne

./: .gitignore  README.md  setup_conda_profile.ps1
.cursor/rules/: style-1.md  style-2.md  style-3.md
.specify/memory/: constitution.md
specs/: Speckit套件分析与实践指南.md
specs/001-db-query/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-mysql-support/: plan.md  spec.md  tasks.md
specs/w1/: 0001_spec_by_GLM4_7.md  0001_spec_by_GLM5.md  0001_spec_by_MiniMax2_5.md  0001_spec_by_Seed2.md  0002_implementation-plan_by_GLM4_7.md  0002_implementation-plan_by_GLM5.md  0002_implementation-plan_by_MiniMax2_5.md  0002_implementation-plan_by_Seed2.md  instructions.md
specs/w2/: instructions-db-query.md  instructions-temp.md  instructions.md  motherduck-style-by-claude.md  motherduck-style-by-genimi.md  motherduck-style-by-gpt.md  motherduck-style.html
specs/w3/: 0001-db-query-code-review-report.md  instructions.md
week02/db_query/backend/: .env.example  =1.1.0  README.md  pyproject.toml
week02/db_query/backend/src/: config.py  main.py
week02/db_query/backend/src/adapters/: __init__.py  base.py  exceptions.py  factory.py  mysql.py  postgresql.py  registry.py  sqlite.py
week02/db_query/backend/src/api/: databases.py  query.py
week02/db_query/backend/src/db/: models.py  repository.py
week02/db_query/backend/src/models/: __init__.py  database.py  errors.py  metadata.py  query.py
week02/db_query/backend/src/services/: connection.py  metadata.py  nl_query.py  query.py
week02/db_query/backend/tests/: test_adapters.py  test_mysql.py
(+150 files in other folders)
